--- a/app.py.ipynb
+++ b/app.py.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fbbadf",
+   "id": "9ef905b0",
    "metadata": {},
    "outputs": [
     {
@@ -46,6 +46,13 @@
      "output_type": "stream",
      "text": [
       "got name Saumya\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [15/May/2021 17:14:22] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -106,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8f147e8",
+   "id": "fe788f05",
    "metadata": {},
    "outputs": [],
    "source": []
